--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@ body{
   height: 25rem;
   margin-left:5% ;
   margin-right:5% ;
-  border-radius: 5%;
+  border-radius: 15px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -33,7 +33,7 @@ body{
   background-color: aliceblue;
   width: 15rem;
   height: 4rem;
-  border-radius: 5%;
+  border-radius: 15px;
   margin-top: 1rem;
   display: flex;
   align-items: end;
@@ -56,6 +56,7 @@ button{
   border: solid rgb(230, 219, 198);
   font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   font-size: 1.5em;
+  border-radius: 5px;
 }
 button:hover {
   background-color: rgb(134, 122, 208);
