--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@ body{
 .main{
   background-color: rgb(230, 219, 198);
   width: 85%;
-  height: 25rem;
+  height: auto;
   margin-left:5% ;
   margin-right:5% ;
   border-radius: 15px;
@@ -32,12 +32,14 @@ body{
 .display-ans{
   background-color: aliceblue;
   width: 15rem;
-  height: 4rem;
+  min-height: 4rem;
   border-radius: 15px;
   margin-top: 1rem;
   display: flex;
   align-items: end;
   justify-content: end;
+  word-break: break-all;
+  word-wrap:break-word;
 }
 .display-ans p{
   font-size: 3em;
